--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mahmoud Karimi Official Website</title>
   <link rel="icon" href="assets/img/logo-icon.png">
 	<!-- CSS only -->
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/lib/bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="assets/css/animating.css"> -->
 	<!-- owl carousel -->
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -30,10 +30,10 @@
   <link rel="stylesheet" href="assets/css/color.css">
 	<!-- Font Awesome 5 -->
 	
-	<link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v4-font-face.min.css">
-	<link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v5-font-face.min.css">
-	<link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v4-shims.min.css">
-	<link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/fontawesome.min.css">
+	<!-- <link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v4-font-face.min.css"> -->
+	<!-- <link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v5-font-face.min.css"> -->
+	<!-- <link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/v4-shims.min.css"> -->
+	<link rel="stylesheet" href="assets/lib/fontawesome-free-6.4.2-web/css/all.min.css">
 	<!-- <script src="https://kit.fontawesome.com/27a041baf1.js" crossorigin="anonymous"></script> -->
 </head>
 <body class="menu-layer">
@@ -134,7 +134,9 @@
 						<a class="magic-hover magic-hover__square" href="index.html">
 							<img src="assets/img/black-logo.png" alt="logo">
 						</a>
-						<h5>I use animation as a third dimension by which to simplify experiences and kuiding thro each and every interaction.</h5>
+						<p style="text-align: justify;">
+							Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job in the excellently. You can follow some examples of these attempts below.
+						</p>
 						<ul class="recent-news gallery-photos">
 							<li>
 								<a class="magic-hover magic-hover__square" href="https://via.placeholder.com/97x97" data-fancybox="gallery"><img alt="girl" src="https://via.placeholder.com/97x97"></a>
@@ -285,62 +287,85 @@
 						<li><h6>Freelance:<span>Available</span></h6></li>
 					</ul>
 				</div>
+				<div class="row sample-project-list sample-project-list-xs ">
+					<div class="col">
+						<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+					</div>
+					<div class="col">
+						<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+					</div>
+				</div>
 			</div>
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="300" data-aos-duration="400">
 				<div class="progress-data">
-					<p>Vestibulum vitae lorim tellus nec dui dictum lorim viverra
-						ac, place uilm rat Lorse viverra a eros ac, pl 
-						rat Lorse ipsom lorimes aul erdum. erdum.  Vestibulum vi
-						rat Lorse ipsom lorimes aul erdum. erdum. </p>
-						<img alt="sine" src="assets/img/sine.png">
-						<div class="progress-bara-data">
-							<div class="row">
-								<div class="col-lg-6 col-md-6 col-sm-6">
-									<div class="home-one-progress">
-										<div class="count-time">
-										<h2 class="timer count-title count-number" data-to="100" data-speed="2000">20</h2><span>%</span>
-										</div>
-										<h5>Light design</h5>
-										<div class="meter cadetblue">
-											  <span data-progress="100" style="width:0;"></span>
-										</div>
+					<p style="text-align: justify;">
+						Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group  must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job  in the excellently. You can follow some examples of these attempts below.
+					</p>
+					<img alt="sine" src="assets/img/sine.png" class="mb-4">
+					<!-- <div class="progress-bara-data">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6">
+								<div class="home-one-progress">
+									<div class="count-time">
+									<h2 class="timer count-title count-number" data-to="100" data-speed="2000">20</h2><span>%</span>
+									</div>
+									<h5>Light design</h5>
+									<div class="meter cadetblue">
+											<span data-progress="100" style="width:0;"></span>
 									</div>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6">
-									<div class="home-one-progress">
-										<div class="count-time">
-										<h2 class="timer count-title count-number" data-to="75" data-speed="2000">20</h2><span>%</span>
-										</div>
-										<h5>director</h5>
-										<div class="meter cadetblue">
-											  <span data-progress="75" style="width:0;"></span>
-										</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6">
+								<div class="home-one-progress">
+									<div class="count-time">
+									<h2 class="timer count-title count-number" data-to="75" data-speed="2000">20</h2><span>%</span>
+									</div>
+									<h5>director</h5>
+									<div class="meter cadetblue">
+											<span data-progress="75" style="width:0;"></span>
 									</div>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6">
-									<div class="home-one-progress">
-										<div class="count-time">
-										<h2 class="timer count-title count-number" data-to="50" data-speed="2000">20</h2><span>%</span>
-										</div>
-										<h5>Acting</h5>
-										<div class="meter cadetblue">
-											  <span data-progress="50" style="width:0;"></span>
-										</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6">
+								<div class="home-one-progress">
+									<div class="count-time">
+									<h2 class="timer count-title count-number" data-to="50" data-speed="2000">20</h2><span>%</span>
+									</div>
+									<h5>Acting</h5>
+									<div class="meter cadetblue">
+											<span data-progress="50" style="width:0;"></span>
 									</div>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6">
-									<div class="home-one-progress">
-										<div class="count-time">
-										<h2 class="timer count-title count-number" data-to="63" data-speed="2000">63</h2><span>%</span>
-										</div>
-										<h5>Web Management</h5>
-										<div class="meter cadetblue">
-											  <span data-progress="63" style="width:0;"></span>
-										</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6">
+								<div class="home-one-progress">
+									<div class="count-time">
+									<h2 class="timer count-title count-number" data-to="63" data-speed="2000">63</h2><span>%</span>
+									</div>
+									<h5>Web Management</h5>
+									<div class="meter cadetblue">
+											<span data-progress="63" style="width:0;"></span>
 									</div>
 								</div>
 							</div>
 						</div>
+					</div> -->
+					<div class="row sample-project-list">
+						<div class="col-lg-6">
+							<img alt="Mirath" src="assets/images/project-sample/2019-didar-dar-otagh-39.jpg">
+						</div>
+						<div class="col-lg-6">
+							<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+						</div>
+					</div>
+					<div class="row sample-project-list sample-project-list-sm">
+						<div class="col-lg-6">
+							<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+						</div>
+						<div class="col-lg-6">
+							<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+						</div>
+					</div>
 				</div>
 
 			</div>
@@ -979,11 +1004,12 @@
 		const age = ((now - birthDay) / 31536000000).toFixed();
 		document.querySelector("#my-age").innerHTML = age;
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
+	<script src="assets/lib/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 	<!-- jQuery -->
 	<script src="assets/js/jquery-3.6.0.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/easy-pie-chart/2.1.6/jquery.easypiechart.min.js"></script>
 	<!-- owl.carousel -->
 	<!-- jQuery -->
