--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
 					</ul>
 				</div>
 				<div class="row sample-project-list sample-project-list-xs ">
-					<div class="col">
-						<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+					<div class="col-lg-6">
+						<img alt="Reverance" src="assets/images/project-sample/2024-reverance.jpg">
 					</div>
-					<div class="col">
-						<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+					<div class="col-lg-6">
+						<img alt="Fereshteha" src="assets/images/project-sample/2024-fereshteha.jpg">
 					</div>
 				</div>
 			</div>
@@ -301,7 +301,7 @@
 					<p style="text-align: justify;">
 						Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group  must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job  in the excellently. You can follow some examples of these attempts below.
 					</p>
-					<img alt="sine" src="assets/img/sine.png" class="mb-4">
+					<img alt="sine" src="assets/images/mahmod-karimi-sign.png" class="mb-4">
 					<!-- <div class="progress-bara-data">
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6">
@@ -360,10 +360,10 @@
 					</div>
 					<div class="row sample-project-list sample-project-list-sm">
 						<div class="col-lg-6">
-							<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+							<img alt="Fereshteha" src="assets/images/project-sample/2024-fereshteha.jpg">
 						</div>
 						<div class="col-lg-6">
-							<img alt="Mirath" src="assets/images/project-sample/2019-mirath.jpg">
+							<img alt="Reverance" src="assets/images/project-sample/2024-reverance.jpg">
 						</div>
 					</div>
 				</div>
