feat(linkdin-link)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="menu-bar">
 					<nav>
 						<ul>
-							<li class="menu-item-has-children">
+							<!-- <li class="menu-item-has-children">
 								<a class="magic-hover magic-hover__square" href="#">Home</a>	
 								<ul>
 									<li><a class="magic-hover magic-hover__square" href="index.html">Home 1</a></li> 
@@ -108,7 +108,7 @@
 									<li><a class="magic-hover magic-hover__square" href="404.html">404</a></li>
 								</ul>
 							</li>
-              <li><a class="magic-hover magic-hover__square" href="index-en.html#contact-info">Contact</a></li>
+              <li><a class="magic-hover magic-hover__square" href="index-en.html#contact-info">Contact</a></li> -->
             </ul>
           </nav>
         </div>
@@ -138,7 +138,7 @@
 							Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job in the excellently. You can follow some examples of these attempts below.
 						</p>
 						<ul class="recent-news gallery-photos">
-							<li>
+							<!-- <li>
 								<a class="magic-hover magic-hover__square" href="https://via.placeholder.com/97x97" data-fancybox="gallery"><img alt="girl" src="https://via.placeholder.com/97x97"></a>
 							</li>
 							<li>
@@ -155,7 +155,7 @@
 							</li>
 							<li>
 								<a class="magic-hover magic-hover__square" href="https://via.placeholder.com/97x97" data-fancybox="gallery"><img alt="girl" src="https://via.placeholder.com/97x97"></a>
-							</li>
+							</li> -->
 						</ul>
 						<!-- <div class="e-mail">
 							<div class="icon-box">
@@ -960,7 +960,7 @@
 				<li><a class="magic-hover magic-hover__square" href="http://instagram.com/mahmoudkarimi.art"><i class="fa-brands fa-instagram fb"></i>Instagram</a></li>
 				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-twitter tw"></i>Twitter</a></li>
 				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-vimeo-v vi"></i>Vimeo</a></li>
-				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-linkedin-in in"></i>Linked In</a></li>
+				<li><a class="magic-hover magic-hover__square" href="https://www.linkedin.com/in/mahmud-karimi-a4bb352b0/"><i class="fa-brands fa-linkedin-in in"></i>Linked In</a></li>
 			</ul>
 			<!-- <h6>© 2022 CV Resume<i class="fa-solid fa-heart"></i>By Winsfolio, All Rights Reserved</h6> -->
 		</div>
