--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mahmoud Karimi Official Website</title>
+  <title>وب سایت رسمی محمود کریمی</title>
   <link rel="icon" href="assets/img/logo-icon.png">
 	<!-- CSS only -->
 	<link href="assets/lib/bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 <!-- loader start-->
 <div class="page-loader">
  <div class="spinner">
-	<p>loading...</p>
+	<p>در حال بارگزاری...</p>
 	<div class="spinner-area spinner-first"></div>
 	<div class="spinner-area spinner-second"></div>
 	<div class="spinner-area spinner-third"></div>
@@ -55,8 +55,8 @@
 			<div class="col-xl-2">
 				<div class="logo-icon">
 					<a class="magic-hover magic-hover__square" href="index.html">
-						<img class="light" src="assets/img/orix-logo.png" alt="logo">
-          	<img class="drak" src="assets/img/black-logo.png" alt="logo">
+						<img class="light" src="assets/img/orix-logo-fa.png" alt="logo">
+          	<img class="drak" src="assets/img/black-logo-fa.png" alt="logo">
         	</a> 
           <a href="javascript:void(0)" class="bar-menu magic-hover magic-hover__square">
 						<i class="fa-solid fa-bars"></i>
@@ -67,16 +67,27 @@
 				<div class="menu-bar">
 					<nav>
 						<ul>
-							<!-- <li class="menu-item-has-children">
-								<a class="magic-hover magic-hover__square" href="#">Home</a>	
-								<ul>
+							<li>
+								<a class="magic-hover magic-hover__square" href="/index.html">خانه</a>	
+								<!-- <ul>
 									<li><a class="magic-hover magic-hover__square" href="index.html">Home 1</a></li> 
 									<li><a class="magic-hover magic-hover__square" href="index-2.html">Home 2 </a></li>
 									<li><a class="magic-hover magic-hover__square" href="index-3.html">Home 3 </a></li>
 									<li><a class="magic-hover magic-hover__square" href="index-4.html">Home 4 ( Light )</a></li>
 									<li><a class="magic-hover magic-hover__square" href="index-4-dark.html">Home 4 ( Dark )</a></li>					
-								</ul>
-							</li>          
+								</ul> -->
+							</li>
+							<li>
+								<a class="magic-hover magic-hover__square" href="index-en.html">EN <img  style="height:20px;" src="assets/img/en.png" /></a>	
+								<!-- <ul>
+									<li><a class="magic-hover magic-hover__square" href="index.html">Home 1</a></li> 
+									<li><a class="magic-hover magic-hover__square" href="index-2.html">Home 2 </a></li>
+									<li><a class="magic-hover magic-hover__square" href="index-3.html">Home 3 </a></li>
+									<li><a class="magic-hover magic-hover__square" href="index-4.html">Home 4 ( Light )</a></li>
+									<li><a class="magic-hover magic-hover__square" href="index-4-dark.html">Home 4 ( Dark )</a></li>					
+								</ul> -->
+							</li>
+							<!--       
 							<li class="menu-item-has-children">
 								<a class="magic-hover magic-hover__square" href="#">Services</a>
 								<ul>
@@ -120,7 +131,7 @@
 					</a>
 					<a  href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button download  button--moema button--text-thick button--text-upper button--size-s" target="_blank">
 						<i class="fa-solid fa-download"></i>
-						Download CV
+						دانلود رزومه
 					</a>
 				</div>
 			</div>
@@ -135,7 +146,7 @@
 							<img src="assets/img/black-logo.png" alt="logo">
 						</a>
 						<p style="text-align: justify;">
-							Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job in the excellently. You can follow some examples of these attempts below.
+							تئاتر در ذات خود یک هنر جمعی است و نمی توان آن را یک هنر انفرادی دانست. همه عوامل یک گروه تئاتر باید مسئولیت خود را بر عهده بگیرند تا یک اثر هنری را به بهترین نحو به صحنه ببرند. من جزو این گروه هستم و سعی می کنم کارم را در حد عالی انجام دهم. در زیر می توانید چند نمونه از این تلاش ها را دنبال کنید.
 						</p>
 						<ul class="recent-news gallery-photos">
 							<!-- <li>
@@ -171,7 +182,7 @@
 								<i class="fa-solid fa-phone"></i>
 							</div>
 							<div>
-								<h6>Email Address</h6>
+								<h6>ایمیل:</h6>
 								<a class="magic-hover magic-hover__square" href="mailto:mahmod22225550@gmail.com">mahmod22225550@gmail.com</a>
 							</div>
 						</div>
@@ -183,28 +194,28 @@
 	<div class="mobile-nav" id="mobile-nav" style="display: block;">
 		<div class="mobile-nav-img-data">
 			<a class="magic-hover magic-hover__square" href="index.html">
-				<img alt="logo" src="assets/img/black-logo.png">
+				<img alt="logo" src="assets/img/black-logo-fa.png">
 			</a>
 		</div>
 		<ul>
 			<li class="menu-item-has-children">
 				<a class="magic-hover magic-hover__square" href="JavaScript:void(0)">
-					<i class="icon-home"></i> Home
+					<i class="icon-home"></i> خانه
 				</a>
-				<ul class="sub-menu">
+				<!-- <ul class="sub-menu">
 					<li><a class="magic-hover magic-hover__square" href="index.html">Home 1</a>
 					<li><a class="magic-hover magic-hover__square" href="index-2.html">Home 2</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-3.html">Home 3</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-4.html">Home 4 ( Light )</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-4-dark.html">Home 4 ( Dark )</a></li>
-				</ul>
+				</ul> -->
 			</li>
 			<li>
 				<a class="magic-hover magic-hover__square" href="about.html">
-					<i class="icon-user"></i> About
+					<i class="icon-user"></i> درباره من
 				</a>
 			</li>
-			<li class="menu-item-has-children"><a class="magic-hover magic-hover__square" href="JavaScript:void(0)"><i class="icon-briefcase"></i> Portfolio</a>
+			<!-- <li class="menu-item-has-children"><a class="magic-hover magic-hover__square" href="JavaScript:void(0)"><i class="icon-briefcase"></i> Portfolio</a>
 				<ul class="sub-menu">
 					<li><a class="magic-hover magic-hover__square" href="portfolio-details-1.html">Portfolio Details 1</a>
 					<li><a class="magic-hover magic-hover__square" href="portfolio-details-2.html">Portfolio Details 2</a></li>
@@ -234,21 +245,21 @@
 				<a class="magic-hover magic-hover__square" href="contact.html">
 					<i class="icon-envelope-open"></i> Contact
 				</a>
-			</li>
+			</li> -->
 		</ul>
     <a  class="magic-hover magic-hover__square" href="JavaScript:void(0)" id="res-cross"></a>
-		<a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button download  button--moema button--text-thick button--text-upper button--size-s" target="_blank"><i class="fa-solid fa-download"></i>Download CV</a>
+		<a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button download  button--moema button--text-thick button--text-upper button--size-s" target="_blank"><i class="fa-solid fa-download"></i>دانلود رزومه</a>
   </div>
 </header>
 
 <section  class="hero-section">
 	<div class="container">
-		<div class="row align-items-center">
+		<div class="row align-items-center" style="direction: ltr;">
 			<div class="col-lg-6 col-md-12" data-aos="fade-up"  data-aos-delay="200" data-aos-duration="300">
-				<div class="user-data">
-					<h2>Hello I Am</h2>
-					<h1>Mahmoud &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Karimi</h1>
-					<p>Theater Lighting Designer</p>
+				<div class="user-data"  style="direction: rtl;">
+					<h2>با سلام من،</h2>
+					<h1>محمود کریمی</h1>
+					<p>طراح نور تئاتر هستم</p>
 						<!-- <a href="javascript:void(0)" class="lightbox-toggle magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s">Start Consulting</a> -->
 						<!-- <span>Available for Freelance</span> -->
 				</div>
@@ -256,9 +267,9 @@
 			<div class="col-lg-6 col-md-12" data-aos="fade-up"  data-aos-delay="300" data-aos-duration="500">
 				<div class="hero-section-img">
 					<img alt="hero-girl-img" src="assets/images/me630x630.png">
-					<div class="happy-satisfied">
+					<div class="happy-satisfied"  style="direction: rtl;">
 						<h2>22</h2>
-						<p>Years experiences</p>
+						<p>سال با طراحی نور زندگی کردم</p>
 					</div>
 				</div>
 			</div>
@@ -270,21 +281,21 @@
 		<div class="row">
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="200" data-aos-duration="300">
 				<div class="about-mee">
-					<h2>About Me</h2>
-					<p>I like creating a cool design project.</p>
+					<h2>درباره من</h2>
+					<p>من دوست دارم یک پروژه طراحی نور فوقالعاده ایجاد کنم.</p>
 					
-					<ul class="social-media-icon"><li><a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s"><i class="fa-solid fa-download" target="_blank"></i>Download CV</a></li>
+					<ul class="social-media-icon"><li><a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s"><i class="fa-solid fa-download" target="_blank"></i>دانلود رزومه</a></li>
 						<!-- <li><a class="f magic-hover magic-hover__square" href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a></li> -->
 						<li><a class="in magic-hover magic-hover__square" href="http://instagram.com/mahmoudkarimi.art"><i class="fa-brands fa-instagram"></i></a></li>
 						<!-- <li><a class="t magic-hover magic-hover__square" href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a></li> -->
 					</ul>
 					<ul class="age">
-						<li><h6>Age:<span id="my-age">29</span></h6></li>
-						<li><h6>Residence:<span>IRAN</span></h6></li>
+						<li><h6>سن:<span id="my-age">29</span></h6></li>
+						<li><h6>تابعیت:<span>ایران</span></h6></li>
 						<!-- <li><h6>Address:<span>88 Some Street, Some Town</span></h6></li> -->
-						<li><h6>E-mail:<span>mahmod22225550@gmail.com</span></h6></li>  
+						<li><h6>ایمیل:<span>mahmod22225550@gmail.com</span></h6></li>  
 						<!-- <li><h6>Phone:<span>+0123 123 456 789</span></h6></li> -->
-						<li><h6>Freelance:<span>Available</span></h6></li>
+						<li><h6>آمادگی جهت همکاری:<span>آزاد</span></h6></li>
 					</ul>
 				</div>
 				<div class="row sample-project-list sample-project-list-xs ">
@@ -299,7 +310,7 @@
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="300" data-aos-duration="400">
 				<div class="progress-data">
 					<p style="text-align: justify;">
-						Theater in its essence is a collective art and cannot be considered as a solo art. All the agents of a theater group  must be responsible for their duties inorder to stage a piece of art in the best way. I am part of this group and I try to do my job  in the excellently. You can follow some examples of these attempts below.
+						تئاتر در ذات خود یک هنر جمعی است و نمی توان آن را یک هنر انفرادی دانست. همه عوامل یک گروه تئاتر باید مسئولیت خود را بر عهده بگیرند تا یک اثر هنری را به بهترین نحو به صحنه ببرند. من جزو این گروه هستم و سعی می کنم کارم را در حد عالی انجام دهم. در زیر می توانید چند نمونه از این تلاش ها را دنبال کنید.
 					</p>
 					<img alt="sine" src="assets/images/mahmod-karimi-sign.png" class="mb-4">
 					<!-- <div class="progress-bara-data">
@@ -954,13 +965,13 @@
 <footer class="gap" id="contact-info" style="background-image: url(./assets/img/footer.png)">
 	<div class="container">
 		<div class="footer-data">
-			<img alt="log" src="assets/img/orix-logo.png">
-			<p>You can contact with me in bellow ways</p>
+			<img alt="log" src="assets/img/orix-logo-fa.png">
+			<p>می توانید از راه های زیر با من در تماس باشید</p>
 			<ul class="social-media-footer">
-				<li><a class="magic-hover magic-hover__square" href="http://instagram.com/mahmoudkarimi.art"><i class="fa-brands fa-instagram fb"></i>Instagram</a></li>
-				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-twitter tw"></i>Twitter</a></li>
-				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-vimeo-v vi"></i>Vimeo</a></li>
-				<li><a class="magic-hover magic-hover__square" href="https://www.linkedin.com/in/mahmud-karimi-a4bb352b0/"><i class="fa-brands fa-linkedin-in in"></i>Linked In</a></li>
+				<li><a class="magic-hover magic-hover__square" href="http://instagram.com/mahmoudkarimi.art"><i class="fa-brands fa-instagram fb"></i>اینستاگرام</a></li>
+				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-twitter tw"></i>توییتر</a></li>
+				<li><a class="magic-hover magic-hover__square" href="#"><i class="fa-brands fa-vimeo-v vi"></i>ویمو</a></li>
+				<li><a class="magic-hover magic-hover__square" href="https://www.linkedin.com/in/mahmud-karimi-a4bb352b0/"><i class="fa-brands fa-linkedin-in in"></i>لینکدین</a></li>
 			</ul>
 			<!-- <h6>© 2022 CV Resume<i class="fa-solid fa-heart"></i>By Winsfolio, All Rights Reserved</h6> -->
 		</div>
