--- a/index-en.html
+++ b/index-en.html
@@ -191,15 +191,15 @@
 				<a class="magic-hover magic-hover__square" href="JavaScript:void(0)">
 					<i class="icon-home"></i> Home
 				</a>
-				<ul class="sub-menu">
+				<!-- <ul class="sub-menu">
 					<li><a class="magic-hover magic-hover__square" href="index.html">Home 1</a>
 					<li><a class="magic-hover magic-hover__square" href="index-2.html">Home 2</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-3.html">Home 3</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-4.html">Home 4 ( Light )</a></li>
 					<li><a class="magic-hover magic-hover__square" href="index-4-dark.html">Home 4 ( Dark )</a></li>
-				</ul>
+				</ul> -->
 			</li>
-			<li>
+			<!-- <li>
 				<a class="magic-hover magic-hover__square" href="about.html">
 					<i class="icon-user"></i> About
 				</a>
@@ -234,7 +234,7 @@
 				<a class="magic-hover magic-hover__square" href="contact.html">
 					<i class="icon-envelope-open"></i> Contact
 				</a>
-			</li>
+			</li> -->
 		</ul>
     <a  class="magic-hover magic-hover__square" href="JavaScript:void(0)" id="res-cross"></a>
 		<a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button download  button--moema button--text-thick button--text-upper button--size-s" target="_blank"><i class="fa-solid fa-download"></i>Download CV</a>
@@ -271,7 +271,7 @@
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="200" data-aos-duration="300">
 				<div class="about-mee">
 					<h2>About Me</h2>
-					<p>I like creating a cool design project.</p>
+					<!-- <p>I like creating a cool design project.</p> -->
 					
 					<ul class="social-media-icon"><li><a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s"><i class="fa-solid fa-download" target="_blank"></i>Download CV</a></li>
 						<!-- <li><a class="f magic-hover magic-hover__square" href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a></li> -->
@@ -1000,7 +1000,7 @@
 <!-- bootstrap -->
 	<script>
 		const now = new Date();
-		const birthDay = new Date("1989-7-19");
+		const birthDay = new Date("1985-7-19");
 		const age = ((now - birthDay) / 31536000000).toFixed();
 		document.querySelector("#my-age").innerHTML = age;
 	</script>
