--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 		<div class="row align-items-center" style="direction: ltr;">
 			<div class="col-lg-6 col-md-12" data-aos="fade-up"  data-aos-delay="200" data-aos-duration="300">
 				<div class="user-data"  style="direction: rtl;">
-					<h2>با سلام من،</h2>
+					<h2>سلام من،</h2>
 					<h1>محمود کریمی</h1>
 					<p>طراح نور تئاتر هستم</p>
 						<!-- <a href="javascript:void(0)" class="lightbox-toggle magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s">Start Consulting</a> -->
@@ -282,7 +282,7 @@
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="200" data-aos-duration="300">
 				<div class="about-mee">
 					<h2>درباره من</h2>
-					<p>من دوست دارم یک پروژه طراحی نور فوقالعاده ایجاد کنم.</p>
+					<!-- <p>من دوست دارم یک پروژه طراحی نور فوقالعاده ایجاد کنم.</p> -->
 					
 					<ul class="social-media-icon"><li><a href="pdf/Fa-Mahmoud-Karimi-Resume.pdf" class="magic-hover magic-hover__square button button--moema button--text-thick button--text-upper button--size-s"><i class="fa-solid fa-download" target="_blank"></i>دانلود رزومه</a></li>
 						<!-- <li><a class="f magic-hover magic-hover__square" href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a></li> -->
@@ -310,7 +310,7 @@
 			<div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"  data-aos-delay="300" data-aos-duration="400">
 				<div class="progress-data">
 					<p style="text-align: justify;">
-						تئاتر در ذات خود یک هنر جمعی است و نمی توان آن را یک هنر انفرادی دانست. همه عوامل یک گروه تئاتر باید مسئولیت خود را بر عهده بگیرند تا یک اثر هنری را به بهترین نحو به صحنه ببرند. من جزو این گروه هستم و سعی می کنم کارم را در حد عالی انجام دهم. در زیر می توانید چند نمونه از این تلاش ها را دنبال کنید.
+						تئاتر در ذات خود یک هنر جمعی است و نمی توان آن را یک هنر انفرادی دانست. همه عوامل یک گروه تئاتر باید مسئولیت خود را بر عهده بگیرند تا یک اثر هنری را به بهترین نحو به صحنه ببرند. من جزو این گروه هستم و سعی می کنم کارم را در حد عالی انجام دهم. در زیر می توانید چند نمونه از این تجربه ها را دنبال کنید.
 					</p>
 					<img alt="sine" src="assets/images/mahmod-karimi-sign.png" class="mb-4">
 					<!-- <div class="progress-bara-data">
@@ -1011,7 +1011,7 @@
 <!-- bootstrap -->
 	<script>
 		const now = new Date();
-		const birthDay = new Date("1989-7-19");
+		const birthDay = new Date("1985-7-19");
 		const age = ((now - birthDay) / 31536000000).toFixed();
 		document.querySelector("#my-age").innerHTML = age;
 	</script>
