--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 				<div class="hero-section-img">
 					<img alt="hero-girl-img" src="assets/images/me630x630.png">
 					<div class="happy-satisfied"  style="direction: rtl;">
-						<h2>22</h2>
+						<h2 id="my-exp">22</h2>
 						<p>سال با طراحی نور زندگی کردم</p>
 					</div>
 				</div>
@@ -1014,6 +1014,10 @@
 		const birthDay = new Date("1985-7-19");
 		const age = ((now - birthDay) / 31536000000).toFixed();
 		document.querySelector("#my-age").innerHTML = age;
+
+		const startDate = new Date("2000-03-20");
+		const epxDate = ((now - startDate) / 31536000000).toFixed();
+		document.querySelector("#my-exp").innerHTML = epxDate;
 	</script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
 	<script src="assets/lib/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
